# roll

./: .codespellrc  .gitignore  .travis.yml  AUTHORS  COPYRIGHT  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.adoc  README.md  RELEASE_NOTES.md  TODO  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  default.profraw  grammar.dot  grammar.dot~  index.html  params.json  parser.c  parser.h  parser.tab.c  parser.y  regen.sh  roll  roll.1  roll.1.in  roll.1~  roll.c  (+8 more)
.deps/: roll-parser.Po  roll-roll.Po  roll-scanner.Po
.github/workflows/: c-cpp.yml  codeql-analysis.yml  codespell.yml  publish.yml  test.yml
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.hhc  index.hhk  index.hhp  index.html  pages.html  roll_8c.html  roll_8c__incl.map  roll_8c__incl.md5  roll_8c_a2526cf02acc7939c8a3c21264dddac50_cgraph.map  roll_8c_a2526cf02acc7939c8a3c21264dddac50_cgraph.md5  roll_8c_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  roll_8c_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  roll_8c_a9708fd7a304b37bac39a25b0a8fe889e_cgraph.md5  roll_8c_ab19c6534375437b3fa360f51198028f5_cgraph.md5  roll_8c_ad29ccfc41dabb89e317de25329c3d279_cgraph.map  roll_8c_ad4c76f688ad79c99d3c39f54358964c8_cgraph.map  roll_8c_ad4c76f688ad79c99d3c39f54358964c8_cgraph.md5  roll_8c_source.html  roll_8h.html  roll_8h__dep__incl.map  roll_8h__dep__incl.md5  roll_8h__incl.map  roll_8h__incl.md5  roll_8h_a9708fd7a304b37bac39a25b0a8fe889e_cgraph.map  roll_8h_aa255c368423347571a5a7ec8a01840cd_cgraph.map  roll_8h_aa255c368423347571a5a7ec8a01840cd_cgraph.md5  roll_8h_ab19c6534375437b3fa360f51198028f5_cgraph.map  roll_8h_ad29ccfc41dabb89e317de25329c3d279_cgraph.md5  roll_8h_ad4c76f688ad79c99d3c39f54358964c8_cgraph.map  roll_8h_ad4c76f688ad79c99d3c39f54358964c8_cgraph.md5  (+5 more)
doc/man/man3/: ir_node.3  roll.c.3  roll.h.3  todo.3
doc/pdf/: annotated.tex  files.tex  refman.tex  roll_8c.tex  roll_8c__incl.md5  roll_8c_a2526cf02acc7939c8a3c21264dddac50_cgraph.md5  roll_8c_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  roll_8c_a9708fd7a304b37bac39a25b0a8fe889e_cgraph.md5  roll_8c_aa255c368423347571a5a7ec8a01840cd_cgraph.md5  roll_8c_ad29ccfc41dabb89e317de25329c3d279_cgraph.md5  roll_8c_ad4c76f688ad79c99d3c39f54358964c8_cgraph.md5  roll_8h.tex  roll_8h__dep__incl.md5  roll_8h__incl.md5  roll_8h_ab19c6534375437b3fa360f51198028f5_cgraph.md5  roll_8h_ad4c76f688ad79c99d3c39f54358964c8_cgraph.md5  structir__node.tex  structir__node__coll__graph.md5  todo.tex
tests/: dices.test  operations.test  special.test  special.test~  test_functions.sh  test_functions.sh~
trunk/roll/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  parser.h  parser.y  regen.sh  roll.1.in  roll.c  roll.h  scanner.l
utils/: prepare_rpm.sh  publish_release.sh
